<resources>
    <string name="app_name">Goluk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imgdes">Image description</string>
    <string name="index_title">Goluk</string>
    <string name="my_video_text">My videos</string>
    <string name="video_more">Me</string>
    <string name="login_out">Not logged in</string>
    <string name="title_activity_local_video_list">LocalVideoListActivity</string>
    <string name="back_text">Back</string>
    <string name="delete_text">Delete</string>
    <string name="edit_text">Edit</string>
    <string name="share_text">Share</string>
    <string name="next_text">Next</string>
    <string name="share_title2">Share</string>
    <string name="share_type">Type</string>
    <string name="share_filter">Filters</string>
    <string name="share_str_open">Share to square</string>
    <string name="share_str_no_location">Positioning&#8230;</string>
    <string name="share_str_join_promotion">More Events</string>
    <string name="share_select_promotion">Choose an Event</string>
    <string name="share_str_join_int">Come and participate the Events. Win more prizes if your Videos have been chosen as Highlights</string>
    <string name="share_str_close">Close share</string>
    <string name="share_str_type_bg">Immoral</string>
    <string name="share_str_type_sg">Accident</string>
    <string name="share_str_type_ml">Scenary</string>
    <string name="share_str_type_ssp">Others</string>
    <string name="mv_text">MV</string>
    <string name="more_text">More</string>
    <string name="share_btn_text">Share</string>
    <string name="share_video_upload_text">Transmitting Video</string>
    <string name="share_live_text">Share webcast</string>
    <string name="share_local_video_text">Share highlight Live Video</string>
    <string name="share_myvideo_text">Share My Live Video</string>
    <string name="video_play_comment_text">Comment</string>
    <string name="video_play_comment_send">Send</string>
    <string name="video_share_desc_title">Add description</string>
    <string name="video_export_text">Generating Video 0%</string>
    <string name="keep_on_text">Continue</string>
    <string name="wifi_link_1_text">First time user</string>
    <string name="wifi_link_2_text">If this is the first time you\'re using Goluk, make sure Wi-Fi is enabled on your phone, and set up a Wi-Fi connection</string>
    <string name="wifi_link_7_text">Select Wi-Fi</string>
    <string name="wifi_link_8_text">Choose Wi-Fi</string>
    <string name="wifi_link_9_text">GP24702115</string>
    <string name="wifi_link_17_text">Confirm that the Wi-Fi indicator light is flashing</string>
    <string name="wifi_link_17_2_text">Click button then go to settings to connect</string>
    <string name="wifi_link_19_text">Skip</string>
    <string name="wifi_link_20_text">2.Edit Goluk Wi-Fi hotspot infoss</string>
    <string name="wifi_link_21_text">Wi-Fi name</string>
    <string name="wifi_link_22_text">goluk123456</string>
    <string name="wifi_link_26_text">Congratulation</string>
    <string name="wifi_link_27_text">Your Goluk has connected to phone successfully</string>
    <string name="wifi_link_28_text">Done</string>
    <string name="wifi_link_29_text">Goluk Wi-Fi</string>
    <string name="wifi_link_30_text">In normal use, the phone client will automatically create a Wi-Fi hotspot to connect to Goluk. You can enjoy Video comment, Highlight share, webcast and other experiences through the phone client</string>
    <string name="wifi_link_31_text">Configuring your Goluk Wi-Fi</string>
    <string name="wifi_link_32_text">Waiting for Goluk to connect to your phone</string>
    <string name="wifi_link_33_text">FAQ</string>
    <string name="wifi_link_34_text">Help: Goluk installation Video</string>
    <string name="wifi_link_35_text">Reset your Goluk Wi-Fi hotspot password</string>
    <string name="wifi_link_36_text">Wi-Fi named GolukXXXX</string>
    <string name="wifi_link_37_text">Connected successfully Goluk3213</string>
    <string name="wifi_link_38_text">Connecting</string>
    <string name="wifi_link_go_system">Goto Wi-FI Setting</string>
    <string name="wifi_link_next">Next</string>
    <string name="wifi_link_conn_failed">Connection failed</string>
    <string name="wifi_link_ok">Confirm</string>
    <string name="wifi_link_twinkle">twinkling</string>
    <string name="wifi_link_wifi_light">Wi-Fi indicator light</string>
    <string name="wifi_link_wifi_name">Named</string>
    <string name="wifi_link_wifi_name2">&#160;Wi-Fi</string>
    <string name="wifi_link_success_conn">Connected</string>
    <string name="wifi_link_complete_wait">Waiting for Goluk</string>
    <string name="wifi_link_complete_conn"> to connect</string>
    <string name="wifi_link_complete_mobile"> to your device</string>
    <string name="wifi_link_complete_your_goluk">Your Goluk</string>
    <string name="wifi_link_complete_sucess_conn"> has been connected successfully</string>
    <string name="wifi_link_complete_foryou">Now</string>
    <string name="wifi_link_complete_config">Configuring</string>
    <string name="wifi_link_complete_golukwifi">Goluk Wi-Fi</string>
    <string name="wifi_link_bind_failed">Unable to pair</string>
    <string name="wifi_link_bind_failed_retry">Unable to pair. Please connect again</string>
    <string name="wifi_link_prompt">Tips</string>
    <string name="wifi_link_blackout">Please turn off Goluk for 5 to 10 seconds, then restart it. Press the OK button and wait for Goluk to connect to your device</string>
    <string name="wifi_link_goluk_bind_failed">Unable to pair Goluk. Please connect again</string>
    <string name="video_live_desc_text">Young Wanderers Club(Travel Typography)</string>
    <string name="video_square_text">Live Video list</string>
    <string name="local_video_title_text">Select video</string>
    <string name="wifi_name_text">Wi-Fi Name</string>
    <string name="wifi_link_text">Unable to connect</string>
    <string name="index_square">Discover</string>
    <string name="square_title_text">Video square</string>
    <string name="watch_live_text">Touch slightly and keep watching</string>
    <string name="video_live_5s_tip">Wait a moment, live will start instantly</string>
    <string name="video_music_complete_text">Complete</string>
    <string name="login_text">Log In</string>
    <string name="remove_cache_text">Clear cache</string>
    <string name="set_ipc_item_text">AutoSync Videos</string>
    <string name="str_setup_autophoto_title">Auto Save Photos To Phone</string>
    <string name="set_ipc_item_hint_text">Automatic synchronizing the five last recorded Highligt and Emergency Video, after device connects and synchronizes successfully with Goluk</string>
    <string name="unbind_text">dashcam Management</string>
    <string name="unbind_camera">Name</string>
    <string name="unbind_camera_wifi_hint_text">Goluk Wi-Fi infos</string>
    <string name="unbind_camera_change_wifi_pwd_hint">Password can be changed when the device is successfully connected to Goluk</string>
    <string name="change_wifi_name">Password</string>
    <string name="unbind_camera_update_text">Firmware Upgrade</string>
    <string name="change_wifi_password_hint">The password must be 8&#8211;15 characters. New password will take effect after 30 seconds.</string>
    <string name="app_update_text">Version</string>
    <string name="loginout_text">Exit</string>
    <string name="goluk_pull_to_refresh_pull_label">Swipe down to refresh</string>
    <string name="goluk_pull_to_refresh_release_label">Release to refresh</string>
    <string name="goluk_pull_to_refresh_refreshing_label">Refresh\u2026</string>
    <string name="goluk_pull_to_refresh_footer_release_label">Upload after release</string>
    <string name="goluk_pull_to_refresh_footer_pull_label">Swipe up to load more.</string>
    <string name="goluk_pull_to_refresh_footer_refreshing_label">Loading\u2026</string>
    <string name="like_num_text">56</string>
    <string name="local_video_text">Local Video</string>
    <string name="setup_text">General Settings</string>
    <string name="ipc_update_text">Firmware Upgrade</string>
    <string name="ipc_update_layout_text">Firmware</string>
    <string name="ipc_update_info_title">Update instructions</string>
    <string name="ipc_download_text">Downloaded</string>
    <string name="ipc_hint_text">Before installing the Firmware upgrade, make sure the camera is connected properly. Please do not power off until the upgrade is complete.</string>
    <string name="ipc_hint_below_image">Firmware upgrade is in process, please do not disconnect the power</string>
    <string name="str_tfcard_text">Before installing the new Firmware, make sure the memory card has been inserted into the device</string>
    <string name="ipc_upgrade_new_text">Your Goluk Firmware version is up to date</string>
    <string name="ipc_upgrade_voice_text">Please wait for the voice prompt after upgrade is complete</string>
    <string name="user_immediately_ok">Login now</string>
    <string name="user_immediately_regist">Register now</string>
    <string name="user_cancle">Cancel</string>
    <string name="count_identify_count">You have received multiple verification codes, please make sure your phone number is correct and the device has good receiving signal</string>
    <string name="count_background_identify_count">Unable to obstain verification code. This phone number has reached the maximum trials to obtain a verification code</string>
    <string name="count_identify_count_six_limit">Unable to obtain verification code. This phone number has reached the maximum attempts to obtain a verification code (4 times per day)</string>
    <string name="user_no_regist">This phone number has not yet been registered</string>
    <string name="user_already_regist">This phone number is already registered</string>
    <string name="user_netword_outtime">Network connection timed out</string>
    <string name="user_getidentify_fail">Unable to get a verification code</string>
    <string name="user_getidentify_success">Verification code has been sent successfully. Please check</string>
    <string name="user_getidentify_limit">This phone number has sent 4 verification codes within 1h</string>
    <string name="user_background_error">Server anomalies</string>
    <string name="user_phone_input_error">Phone number entry error</string>
    <string name="user_send_identify_fail">Unable to send verification code. Please request a verification code again</string>
    <string name="user_identify_btn_afresh">Reacquire</string>
    <string name="user_no_getidentify">Please enter the verification code</string>
    <string name="user_identify_format">Verification code format is incorrect</string>
    <string name="user_login_success">Login successful</string>
    <string name="pwd_text">Password</string>
    <string name="wifi_pwd_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="def">default</string>
    <string name="dialog_str_tuijian">Recommend</string>
    <string name="dialog_str_cancel">Cancel</string>
    <string name="dialog_str_goback">Return to Home</string>
	<string name="str_adas_config">Safe Headway Pre-warning</string>
	<string name="str_adas_select_car">Please choose your vehicle type</string>
	<string name="unbind_select_title_txt">Dashcam</string>
	<string name="unbind_add_mobile_btn">Add new Dashcam</string>
    <string name="str_submit">Submit</string>
    <string name="str_input_recommend_reason">Please enter your reasons for the recommendation</string>
    <string name="str_camera_text">Dashcam</string>
    <string name="str_choose_in_album">Choose from album</string>
    <string name="str_system_head">System Avatar</string>
    <string name="str_usercenter_more_share">Share this page</string>
</resources>