<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ipcbind_bg" >

    <TextView
        android:id="@+id/wifi_link_sucess_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/wifi_link_26_text"
        android:textColor="#565656"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/wifi_link_sucess_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_link_sucess_txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/wifi_link_27_text"
        android:textColor="#565656"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/wifi_link_sucess_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_link_sucess_txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/imgdes" />

    <TextView
        android:id="@+id/wifi_link_sucess_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/wifi_link_35_text"
        android:textColor="#828282" />

</RelativeLayout>