<?xml version="1.0" encoding="utf-8"?>
<!-- 修改ipc热点密码 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#F1F1F1">
	
	<RelativeLayout
		android:id="@+id/title_layout"
		android:layout_width="match_parent"
		android:layout_height="62dp"
		android:background="#F1F1F1">
		
		<ImageButton
			android:id="@+id/back_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:background="@drawable/connect_back_btn_btn"
			android:contentDescription="@string/imgdes" />
		
		<Button
			android:id="@+id/jump_btn"
			android:layout_width="62dp"
			android:layout_height="30dp"
			android:layout_marginRight="10dp"
			android:layout_centerVertical="true"
			android:background="@drawable/connect_jump_bg"
			android:text="@string/wifi_link_19_text"
			android:textColor="#858585"
			android:textSize="16sp"
			android:layout_alignParentRight="true"/>
	</RelativeLayout>
	
	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:layout_below="@id/title_layout"
		android:textSize="24sp"
		android:textColor="#595959"
		android:text="@string/wifi_link_20_text" />

	<RelativeLayout
		android:id="@+id/wifi_name_layout"
		android:layout_width="match_parent"
		android:layout_height="42dp"
		android:layout_marginTop="50dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_below="@id/textView1"
		android:background="@drawable/connect_jump_bg">
		
		<TextView
			android:id="@+id/wifi_name_title"
			android:layout_width="96dp"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:gravity="center"
			android:text="@string/wifi_link_21_text"
			android:textSize="18sp"
			android:textColor="#adadad"/>
		
		<View
			android:id="@+id/name_solid"
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:layout_toRightOf="@id/wifi_name_title"
			android:background="#b1b1b1"/>
		
		<TextView
			android:id="@+id/wifi_name_text"
			android:layout_width="match_parent"
			android:layout_height="42dp"
			android:layout_marginLeft="14dp"
			android:gravity="center_vertical"
			android:layout_toRightOf="@id/name_solid"
			android:background="#00000000"
			android:text="@string/wifi_link_22_text"
			android:textColor="#595959"
			android:textSize="16sp"/>
	</RelativeLayout>
	
	<RelativeLayout
		android:id="@+id/wifi_pwd_layout"
		android:layout_width="match_parent"
		android:layout_height="42dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="12dp"
		android:layout_below="@id/wifi_name_layout"
		android:background="@drawable/connect_jump_bg">
		
		<TextView
			android:id="@+id/wifi_pwd_title"
			android:layout_width="96dp"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:gravity="center"
			android:text="@string/pwd_text"
			android:textSize="18sp"
			android:textColor="#adadad"/>
		
		<View
			android:id="@+id/pwd_solid"
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:layout_toRightOf="@id/wifi_pwd_title"
			android:background="#b1b1b1"/>
		
		<EditText
			android:id="@+id/wifi_pwd_text"
			android:layout_width="match_parent"
			android:layout_height="42dp"
			android:layout_marginLeft="14dp"
			android:layout_toRightOf="@id/pwd_solid"
			android:background="#00000000"
			android:digits="@string/wifi_pwd_digits"
			android:inputType="text"
			android:textColor="#595959"
			android:textSize="16sp"/>
	</RelativeLayout>
	
	<ImageView
		android:id="@+id/imageView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/wifi_pwd_layout"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="40dp"
		android:src="@drawable/connect_banner_2"
		android:contentDescription="@string/imgdes"/>
	
	<Button
		android:id="@+id/next_btn"
		android:layout_width="match_parent"
		android:layout_height="52dp"
		android:layout_marginBottom="34dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_alignParentBottom="true"
		android:background="@drawable/connect_mianbtn"
		android:textSize="20sp"
		android:textColor="@color/white"
		android:text="@string/next_text" />
	
</RelativeLayout>






