<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="17dp"
    android:background="@drawable/custom_dialog_bg"
    android:orientation="vertical" >

    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="43.3dp"
        android:background="#00000000"
        android:text="@string/str_camera_text"
        android:textColor="#1163a2"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />

    <Button
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="43.3dp"
        android:background="#00000000"
        android:text="@string/str_choose_in_album"
        android:textColor="#1163a2"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />

    <Button
        android:id="@+id/system"
        android:layout_width="match_parent"
        android:layout_height="43.3dp"
        android:background="#00000000"
        android:text="@string/str_system_head"
        android:textColor="#1163a2"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="43.3dp"
        android:background="#00000000"
        android:text="@string/user_cancle"
        android:textColor="#1163a2"
        android:textSize="15sp" />

</LinearLayout>