<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f9fa"
    android:orientation="vertical" >
    
    <ImageView 
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/connect_close_icon"
        android:contentDescription="@string/def"/>
    
    <TextView 
        android:id="@+id/connect_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#565656"
        android:textSize="16sp"
        android:text="@string/unbind_select_title_txt"/>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="#00000000"
        android:text="@string/edit_text"
        android:textColor="#047cf3"
        android:textSize="14sp" />
    
    
    <ListView 
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edit_btn"
        android:layout_above="@id/addMoblieBtn"/>
    
    <Button 
        android:id="@+id/addMoblieBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/unbind_add_mobile_btn"
        android:textSize="16sp"
        android:background="@drawable/connect_btn_blue"
        android:textColor="#047cf3"/>

</RelativeLayout>