<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <HorizontalScrollView
        android:id="@+id/shareselecttype_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/share_type_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/share_str_type_bg"
                android:textSize="14sp" />

            <Button
                android:id="@+id/share_type_sg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/share_str_type_sg"
                android:textSize="14sp" />

            <Button
                android:id="@+id/share_type_ml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/share_str_type_ml"
                android:textSize="14sp" />

            <Button
                android:id="@+id/share_type_ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/share_str_type_ssp"
                android:textSize="14sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/share_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/share_str_open" />

    <EditText
        android:id="@+id/share_sayother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/share_open"
        android:hint="@string/share_str_sayother" />

    <ListView
        android:id="@+id/shortshare_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/share_sayother"
        android:layout_below="@id/shareselecttype_type"
        android:scrollbars="none" >
    </ListView>

</RelativeLayout>