<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout 
       	android:id="@+id/titlelayout"
        android:layout_width="match_parent"
		android:layout_height="46dp"
		android:background="#242629"
        >
        
        <TextView   
		android:id="@+id/cancle"
		android:text="@string/user_cancle"
		android:textSize ="16sp"
		android:textColor="#1163a2"
		android:gravity="center" 
		android:paddingLeft="10dp"
	    android:layout_height="match_parent" 
	    android:layout_width="wrap_content"/> 
	    
        
        <TextView   
		android:text="@string/dialog_str_tuijian"
		android:textSize ="18sp"
		android:textColor="#ffffff"
		android:gravity="center" 
		android:layout_centerInParent="true"
	    android:layout_height="match_parent" 
	    android:layout_width="wrap_content"/> 
	    
        <TextView   
		android:id="@+id/tuijian"
		android:text="@string/str_submit"
		android:textSize ="16sp"
		android:textColor="#1163a2"
		android:gravity="center" 
		android:paddingRight="10dp"
		android:layout_alignParentRight="true"
	    android:layout_height="match_parent" 
	    android:layout_width="wrap_content"/> 
        
    </RelativeLayout>

    <EditText   
		android:id="@+id/text"
		android:layout_below="@+id/titlelayout"
		android:hint="@string/str_input_recommend_reason"
		android:textColorHint="#5f5f5f"
		android:textSize ="16sp"
		android:textColor="#ffffff"
		android:padding="10dp"
		android:gravity="top|left"
	    android:layout_height="match_parent" 
	    android:layout_width="match_parent"
	    android:background="#f2242629"
	    android:maxLength="50"/> 
	    
     <TextView   
       	android:id="@+id/number"
		android:textSize ="16sp"
		android:textColor="#5f5f5f"
		android:gravity="right"
		android:padding="10dp"
		android:layout_alignBottom="@+id/text"
		android:layout_alignParentRight="true"
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"/> 
    
</RelativeLayout>