<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/wifi_link_waitconn_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/wifi_link_32_text"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/wifi_link_waitconn_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_link_waitconn_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:background="@drawable/finish_pic_8"
        android:contentDescription="@string/imgdes" />

    <TextView
        android:id="@+id/wifi_link_waitconn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/connecthelp_icon"
        android:drawablePadding="5dp"
        android:text="@string/wifi_link_33_text"
        android:textSize="16sp" />

</RelativeLayout>