<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="bottom"
	android:layout_marginBottom="17dp"
	android:background="@drawable/custom_dialog_bg"
	android:orientation="vertical">
    <Button 
        android:id="@+id/btn_user_more_share"
        android:layout_width="match_parent"
        android:layout_height="43.3dp"
        android:textColor="#1163a2"
        android:textSize="15sp"
        android:background="#00000000"
        android:text="@string/str_usercenter_more_share"/>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"/>
    <Button 
        android:id="@+id/btn_user_more_back"
        android:layout_width="match_parent"
        android:layout_height="43.3dp"
        android:textColor="#1163a2"
        android:textSize="15sp"
        android:background="#00000000"
        android:text="@string/dialog_str_goback"/>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"/>
    
    <Button 
        android:id="@+id/btn_user_more_cancle"
         android:layout_width="match_parent"
        android:layout_height="43.3dp"
        android:textColor="#1163a2"
        android:textSize="15sp"
        android:background="#00000000"
        android:text="@string/dialog_str_cancel"/>
</LinearLayout>